# grpc_mock

./: .env  .env.default  .env.default_postgres  .env.default_sqlite  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  docker-compose_postgres.yml  docker-compose_sqlite.yml  pyproject.toml  swagger.yaml  yoyo.ini
dev/: ToDo  db_client.py  grpc_client.proto  grpc_client.py  grpc_mock.drawio  http_client.py  proto_file_parser.py  raw_listener.py  raw_sockets_service.py
dev/http_clients/: add_mocks.py  delete_mocks.py  get_logs.py  get_mocks.py
dev/http_clients/grpc_mocks_testing/: add_grpc_mocks.py  delete_grpc_mocks.py  get_grpc_logs.py  get_grpc_mocks.py
dev/http_clients/rest_mocks_testing/: add_rest_mocks.py  check_rest__s3.py  check_rest_mocks.py  delete_rest_mocks.py  get_rest_logs.py  get_rest_mocks.py
docs/openapi/: swagger.yaml
grpc_mock/: __main__.py  config.py  db.py  db_structure.py  models.py  prepare_sqlite_db.py  proto_parser.py  proto_utils.py  repo.py  repo_postgres.py  repo_sqlite.py  reponse.py  repository.py  response.py  schemas.py  server.py  service.py  services.py  views.py
migrations/: 20250212_01_8XSAK.rollback.sql  20250212_01_8XSAK.sql  20250212_02_bx534.rollback.sql  20250212_02_bx534.sql  20250212_03_XwiLN.rollback.sql  20250212_03_XwiLN.sql  20250212_04_HsqZT.rollback.sql  20250212_04_HsqZT.sql  20250213_01_pIhgX.rollback.sql  20250213_01_pIhgX.sql  20250213_02_GE5vR.rollback.sql  20250213_02_GE5vR.sql  20250530_01_EnxOh.rollback.sql  20250530_01_EnxOh.sql  20250601_01_SeparateTables.rollback.sql  20250601_01_SeparateTables.sql  20250604_01_AddIsBinaryFlag.rollback.sql  20250604_01_AddIsBinaryFlag.sql
tests/: test_grpc_request_parsing.py  test_proto_parser.py
tests/data/: protofiles.py  typedefs.py
tests/integration/: conftest.py  test_grpc_api.py  test_mock_adding_grpc.py  test_rest_api.py
